# iced-lenia

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs  main.rs
